--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,9 @@
 [submodule "sources/all"]
         path = sources/all
-        url = https://gitlab.opengapps.org/opengapps/all.git
-        branch = master
+        # url = https://gitlab.opengapps.org/opengapps/all.git
+        url = https://gitlab.opengapps.org/ip/all.git
+        # branch = master
+        branch = 12x
         update = rebase
         ignore = all
 [submodule "sources/arm"]
